--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/base.html' %}
 
-{% block page_title %} <h2>  Contact Info </h2> {% endblock page_title %}
+{% block title %}Contact Info{% endblock title %}
 
 {% block page_content %}
     <div class='wells'>
