--- a/surveys/templates/surveys/survey_results.html
+++ b/surveys/templates/surveys/survey_results.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/base.html' %}
 {% load surveys_tags %}
 
-{% block page_title %} <h2> Results </h2> {% endblock page_title %}
+{% block title %} Survey Results {% endblock title %}
 
 {% block page_content %} 
 
