--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -2,17 +2,16 @@
 
 <html> 
 <head>
-    <title>{% block title %}ACOR-E{% endblock title %}</title>
+    <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
-
     {% block css %}{% endblock css %}
     {% block js %}{% endblock js %}
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
+      <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -22,7 +21,7 @@
           </button>
           <a class="navbar-brand" href="/">The Game</a>
         </div>
-        <div class="collapse navbar-collapse" id="general_navbar">
+        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/acore">ACOR-E</a></li>
             <li><a href="/contact">Contact</a></li>
@@ -32,16 +31,8 @@
         </div>
       </div>
     </nav>
+    <div class='jumbotron'> </div>
 
-
-
-
-
-
-
-    <div class="jumbotron">
-        <div class="container">{% block page_title %}{% endblock page_title %} </div>
-    </div>
     <div class="container">
         {% block page_content %}{% endblock page_content %}
     </div>
