--- a/templates/acore.html
+++ b/templates/acore.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/base.html' %}
 
-{% block page_title %} <h2> ACOR-E </h2> {% endblock page_title %}
+{% block title %} Acore Info {% endblock title %}
 
 {% block page_content %}
     <div class='wells'>
