--- a/surveys/templates/surveys/home.html
+++ b/surveys/templates/surveys/home.html
@@ -6,18 +6,33 @@
 {% block title %}The Game{% endblock title %}
 
 {% block page_content %} 
-    <div style='height:4em; width:100%; background-color:#333; margin-bottom:1.5cm;'> <h3 id='gameStatus' style='color:#ffffff; text-align:center; padding-top:0.5em; padding-left:0px; padding-right:0px; font-family:Helvetica, Arial;'> </h3> </div>
+    <div style='height:4em; width:100%; margin-bottom:1.5cm; background-color:#eee;'>
+        <span id='status1' class='game-status'>
+            <h4 class='status-text'> Passive Phase </h4> 
+        </span>
+        <span id='status2' class='game-status'>
+            <h4 class='status-text'> Planning Phase </h4> 
+        </span>
+        <span id='status3' class='game-status'>
+            <h4 class='status-text'> Protesting Phase </h4> 
+        </span>
+        <span id='status4' class='game-status'>
+            <h4 class='status-text'> Passing Phase </h4> 
+        </span>
+    </div>
+
+
     <div class="col-sm-7" id="npcDiv" style='position:relative'></div>
-    <div class="col-sm-5" style='height:75vh;'>
+    <div class="col-sm-5" style='height:75vh; '>
         <div class='center-block'> <button id="nextStep" class="btn btn-success center-block" type="button" style='width:40%; height:3em; margin:auto;'><strong> Next Step </strong> </button> </div>
         <div class='page-header'> </div>
-        <div id='scoreboard' class="col-sm-8"> </div>
-        <div class="col-sm-4" > 
-            <div display='inline' style='background-color:#d9edf7; border-radius:50%; border-style:solid; border-color:#bce8f1; height:1em; width:1em; float:left;'></div> <p> <strong> Waiting </strong> </p> 
-            <div display='inline' style='background-color:#fcf8e3; border-radius:50%; border-style:solid; border-color:#faebcc; height:1em; width:1em; float:left;'></div> <p> <strong> Trying to pass </strong> </p> 
-            <div display='inline' style='background-color:#dff0d8; border-radius:50%; border-style:solid; border-color:#d6e9c6; height:1em; width:1em; float:left;'></div> <p> <strong> Successfully Passed </strong> </p>
-            <div display='inline' style='background-color:#ccc; border-radius:50%; border-style:solid; border-color:#aaa; height:1em; width:1em; float:left;'></div> <p> <strong> Failed to Pass </strong> </p>  
-            <div display='inline' style='background-color:#f2dede; border-radius:50%; border-style:solid; border-color:#ebccd1; height:1em; width:1em; float:left;'></div> <p> <strong> Protesting </strong> </p> 
+        <div id='scoreboard' class="col-sm-7" style='padding-left:0px; padding-right:0px;'> </div>
+        <div class="col-sm-5" > 
+            <span class='scoreboard-color-legend' style='background-color:#d9edf7; border-color:#bce8f1;'></span> <p> <strong> &nbsp Waiting </strong> </p> 
+            <span class='scoreboard-color-legend' style='background-color:#fcf8e3; border-color:#faebcc;'></span> <p> <strong> &nbsp Trying to pass </strong> </p> 
+            <span class='scoreboard-color-legend' style='background-color:#dff0d8; border-color:#d6e9c6;'></span> <p> <strong> &nbsp Successfully Passed </strong> </p>
+            <span class='scoreboard-color-legend' style='background-color:#ccc; border-color:#aaa;'></span> <p> <strong> &nbsp Failed to Pass </strong> </p>  
+            <span class='scoreboard-color-legend' style='background-color:#f2dede; border-color:#ebccd1;'></span> <p> <strong> &nbsp Protesting </strong> </p> 
         </div>
     </div>
 
@@ -36,6 +51,14 @@
     dt { 
         float: left; 
         padding: 4px; 
+    }
+
+    .scoreboard-color-legend{         
+        border-radius:50%; 
+        border-style:solid; 
+        height:1em; 
+        width:1em; 
+        float:left;
     }
 
     .graph_bar {
@@ -63,7 +86,7 @@
         background: -webkit-gradient(linear, left top, left bottom, from(#b92c28), to(#6e1b18));
     }
 
-    .pass_fail-alert {
+    .pass-fail-alert {
         background-color:#ccc;
         border-radius:4px;
         border-width:1px;
@@ -74,6 +97,31 @@
         margin:0;
         padding:15px;
         text-align:center;
+    }
+
+    .game-status{
+        width:25%;
+        height:100%;
+        float:left;
+    }
+
+    .active-status{
+        background-color:#888;
+        border-color:#888;
+        border-style:solid;
+        border-radius:5px;
+    }
+
+    .nonactive-status{
+        background-color:#eee;
+    }
+
+    .status-text{
+        color:#ffffff; 
+        text-align:center;
+        padding-left:0px; 
+        padding-right:0px;
+        font-family:Helvetica, Arial;
     }
 
 
@@ -124,21 +172,6 @@
             return emoURL;
         }
 
-        function getLabelClass(action){
-            // Returns the appropriate css bootstrap class for an alert element for name side bar.
-            if(action == 'Wait'){
-                return 'label label-info';
-            } else if (action == 'Pass'){
-                return 'label label-warning';
-            } else if (action == 'Pass_Success'){
-                return 'label label-success';
-            } else if (action == 'Protest'){
-                return 'label label-danger';
-            } else if (action == 'Pass_Fail'){
-                return 'label label-default'
-            } 
-        }
-
         function getAlertClass(action){
             // Returns the appropriate css bootstrap class for an alert element for name side bar.
             if(action == 'Wait'){
@@ -150,7 +183,7 @@
             } else if (action == 'Protest'){
                 return 'alert alert-danger';
             } else if (action == 'Pass_Fail'){
-                return 'pass_fail-alert'
+                return 'pass-fail-alert'
             } 
         }
 
@@ -164,6 +197,22 @@
                 return 'Passing';
             }else{
                 return 'Rest';
+            }
+        }
+
+        function highlightGameStatus(gameStatus){
+            if(gameStatus == 'initial'){
+                $('#status1').attr('class', 'game-status nonactive-status');
+                $('#status2').attr('class', 'game-status active-status');
+            }else if (gameStatus == 'protest?'){
+                $('#status2').attr('class', 'game-status nonactive-status');
+                $('#status3').attr('class', 'game-status active-status');
+            }else if (gameStatus == 'penultimate'){
+                $('#status3').attr('class', 'game-status nonactive-status');
+                $('#status4').attr('class', 'game-status active-status');
+            }else{
+                $('#status4').attr('class', 'game-status nonactive-status');
+                $('#status1').attr('class', 'game-status active-status');
             }
         }
 
@@ -182,7 +231,8 @@
                 var gameStatus = npcData["gameStatus"];
                 var passingNPCs = npcData["passing_list"];
 
-                $('#gameStatus').html(getGameStatusTitle(gameStatus));
+                //$('#gameStatus').html(getGameStatusTitle(gameStatus));
+                highlightGameStatus(gameStatus);
 
                 for(var i = 0; i < npcCount; i++){
                     $("<div id='npcParent" + (i+1) + "' class='col-sm-12 npc-container'> </div>").appendTo("#npcDiv");
@@ -290,7 +340,8 @@
                         $('#fearbar_'+nameList[i]).width(getEmotionPercent(emotionList[i][3]) + '%');                        
                     }
 
-                    $('#gameStatus').html(getGameStatusTitle(gameStatus));
+                    //$('#gameStatus').html(getGameStatusTitle(gameStatus));
+                    highlightGameStatus(gameStatus);
             }
             xmlhttp.send();
         }
