--- a/surveys/templates/surveys/home.html
+++ b/surveys/templates/surveys/home.html
@@ -21,21 +21,24 @@
         </span>
     </div>
 
-
-    <div class="col-sm-7" id="npcDiv" style='position:relative'></div>
-    <div class="col-sm-5" style='height:75vh; '>
-        <div class='center-block'> <button id="nextStep" class="btn btn-success center-block" type="button" style='width:40%; height:3em; margin:auto;'><strong> Next Step </strong> </button> </div>
-        <div class='page-header'> </div>
-        <div id='scoreboard' class="col-sm-7" style='padding-left:0px; padding-right:0px;'> </div>
-        <div class="col-sm-5" > 
-            <span class='scoreboard-color-legend' style='background-color:#d9edf7; border-color:#bce8f1;'></span> <p> <strong> &nbsp Waiting </strong> </p> 
-            <span class='scoreboard-color-legend' style='background-color:#fcf8e3; border-color:#faebcc;'></span> <p> <strong> &nbsp Trying to pass </strong> </p> 
-            <span class='scoreboard-color-legend' style='background-color:#dff0d8; border-color:#d6e9c6;'></span> <p> <strong> &nbsp Successfully Passed </strong> </p>
-            <span class='scoreboard-color-legend' style='background-color:#ccc; border-color:#aaa;'></span> <p> <strong> &nbsp Failed to Pass </strong> </p>  
-            <span class='scoreboard-color-legend' style='background-color:#f2dede; border-color:#ebccd1;'></span> <p> <strong> &nbsp Protesting </strong> </p> 
+    <div class='col-sm-12' id='central-div'>
+        <div class="col-sm-7" id="npcDiv" style='position:relative'></div>
+        <div id='referenceDiv' class="col-sm-5" style='height:75vh;'>
+            <div class='center-block'> 
+                <button id="nextStep" class="btn btn-success center-block" type="button" style='width:40%; height:3em;'><strong> Next Step </strong> </button> 
+                <button id='info' type='button' class='btn btn-warning info-button'> Info </button>
+            </div>
+            <div class='page-header'> </div>
+            <div id='scoreboard' class="col-sm-7" style='padding-left:0px; padding-right:0px;'> </div>
+            <div class="col-sm-5" > 
+                <span class='scoreboard-color-legend' style='background-color:#d9edf7; border-color:#bce8f1;'></span> <p> <strong> &nbsp Waiting </strong> </p> 
+                <span class='scoreboard-color-legend' style='background-color:#fcf8e3; border-color:#faebcc;'></span> <p> <strong> &nbsp Trying to pass </strong> </p> 
+                <span class='scoreboard-color-legend' style='background-color:#dff0d8; border-color:#d6e9c6;'></span> <p> <strong> &nbsp Successfully Passed </strong> </p>
+                <span class='scoreboard-color-legend' style='background-color:#ccc; border-color:#aaa;'></span> <p> <strong> &nbsp Failed to Pass </strong> </p>  
+                <span class='scoreboard-color-legend' style='background-color:#f2dede; border-color:#ebccd1;'></span> <p> <strong> &nbsp Protesting </strong> </p> 
+            </div>
         </div>
     </div>
-
 {% endblock page_content %}
 
 
@@ -124,6 +127,13 @@
         font-family:Helvetica, Arial;
     }
 
+    .info-button{
+        margin-left:1em; 
+        float:right; 
+        vertical-align: center;
+        
+    }
+
 
 </style>
 {% endblock css %}
@@ -187,19 +197,6 @@
             } 
         }
 
-
-        function getGameStatusTitle(gameStatus){
-            if(gameStatus == 'initial'){
-                return 'Planning';
-            }else if (gameStatus == 'protest?'){
-                return 'Protesting';
-            }else if (gameStatus == 'penultimate'){
-                return 'Passing';
-            }else{
-                return 'Rest';
-            }
-        }
-
         function highlightGameStatus(gameStatus){
             if(gameStatus == 'initial'){
                 $('#status1').attr('class', 'game-status nonactive-status');
@@ -216,6 +213,40 @@
             }
         }
 
+        function infoPopup(){
+            var width = window.innerWidth;
+            var height = window.innerHeight;
+            // newWindow = window.open('surveys/infoPopup', "ACORE Eplanation", "toolbar=no, scrollbars=no, resizable=yes, top=" + (height*.125) + ", left=" + (width * 0.125) + ", width=" + (width*0.75) +", height=" + (height * 0.75));
+            newWindow = window.open('surveys/infoPopup', "ACORE Eplanation", "toolbar=no, scrollbars=no, resizable=yes, top=" + (height*.125) + ", left=" + (width * 0.125) + ", width=" + (width*0.75) +", height=" + (height * 0.75));
+
+            if (window.focus) {
+                newWindow.focus()
+            }
+            return false;
+        }
+
+        function firstGame(){
+            // Used to set the first game variable in views.py to false, as well as execute the first time instruction stuff
+            var xmlhttp = new XMLHttpRequest();
+            xmlhttp.open("GET", "surveys/firstGame", true);
+            xmlhttp.onload=function(){
+                var data = JSON.parse(xmlhttp.response)
+                var newGame = data['newGame']
+            }
+            xmlhttp.send();
+            document.getElementById('info').disabled = false;
+            document.getElementById('nextStep').disabled = false;
+            $('#referenceDiv').css('opacity', '1');
+
+            var newGameDiv = document.getElementById('newGameDiv');
+            newGameDiv.parentNode.removeChild(newGameDiv);
+            initializeNPCs();
+
+        }
+
+        // issue here is when is initializeNPCs called, adn when are they initialized in teh views.py. make sure you dont have to 
+        // initialize them before hand. Also, maybe they can be intialized, who knows. check it out.
+
         function initializeNPCs(){
             /* Function is called everytime the page is loaded. It retrives data about the NPCs through a JSON call.
             Creates a div hirearcy for each NPC such that the elements can be modified and adapted as they move through the line.
@@ -230,42 +261,53 @@
                 var emotionList = npcData["emotions"];
                 var gameStatus = npcData["gameStatus"];
                 var passingNPCs = npcData["passing_list"];
+                var newGame = npcData['newGame']
 
                 //$('#gameStatus').html(getGameStatusTitle(gameStatus));
-                highlightGameStatus(gameStatus);
+                if(! newGame){
+                    highlightGameStatus(gameStatus);
 
-                for(var i = 0; i < npcCount; i++){
-                    $("<div id='npcParent" + (i+1) + "' class='col-sm-12 npc-container'> </div>").appendTo("#npcDiv");
+                    for(var i = 0; i < npcCount; i++){
+                        $("<div id='npcParent" + (i+1) + "' class='col-sm-12 npc-container'> </div>").appendTo("#npcDiv");
 
-                    $("<div id='npcChild" + (i+1) + "' class='col-sm-7'></div>").appendTo('#npcParent' + (i+1));
-                    $("<h4 style='text-align:center'><strong>" + nameList[i] +" </strong></h4>").appendTo("#npcChild" + (i+1));
-                    $("<img id='npcFace"+ nameList[i] + "' src='" + getHighestEmotion(emotionList[i]) + "' border='0' alt='happy' style='width:100%; height:100%;' />").appendTo("#npcChild" + (i+1));
+                        $("<div id='npcChild" + (i+1) + "' class='col-sm-7'></div>").appendTo('#npcParent' + (i+1));
+                        $("<h4 style='text-align:center'><strong>" + nameList[i] +" </strong></h4>").appendTo("#npcChild" + (i+1));
+                        $("<img id='npcFace"+ nameList[i] + "' src='" + getHighestEmotion(emotionList[i]) + "' border='0' alt='happy' style='width:100%; height:100%;' />").appendTo("#npcChild" + (i+1));
 
-                    $("<div id='npcChildBar" + (i+1) + "' class='col-sm-5'> </div>").appendTo("#npcParent" + (i+1));
-                    $("<h4> &nbsp </h4>").appendTo("#npcChildBar" + (i+1));
-                    $("<dl style='width:100%' id='npcChart"+ (i+1) + "' > </dl>").appendTo("#npcChildBar" + (i+1));
-                    $("<dt id='joytext_" + nameList[i] + "'> Joy " + getEmotionPercent(emotionList[i][0]) + "%</dt>").appendTo("#npcChart"+ (i+1));
-                    $("<dd><div id='joybar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][0]) + "%'> &nbsp </div></dd>").appendTo("#npcChart" + (i+1));
-                    $("<dt id='hopetext_" + nameList[i] + "'> Hope " + getEmotionPercent(emotionList[i][1]) + "%</dt>").appendTo("#npcChart"+ (i+1));
-                    $("<dd><div id='hopebar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][1]) + "%'> &nbsp </div></dd>").appendTo("#npcChart" + (i+1));
-                    $("<dt id='sorrowtext_" + nameList[i] + "'> Sorrow " + getEmotionPercent(emotionList[i][2]) + "%</dt>").appendTo("#npcChart" + (i+1));
-                    $("<dd><div id='sorrowbar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][2]) + "%'> &nbsp </div></dd>").appendTo("#npcChart" + (i+1));
-                    $("<dt id='feartext_" + nameList[i] + "'> Fear " + getEmotionPercent(emotionList[i][3]) + "%</dt>").appendTo("#npcChart" + (i+1));
-                    $("<dd><div id='fearbar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][3]) + "%'> &nbsp </div></dd>").appendTo("#npcChart" + (i+1));
+                        $("<div id='npcChildBar" + (i+1) + "' class='col-sm-5'> </div>").appendTo("#npcParent" + (i+1));
+                        $("<h4> &nbsp </h4>").appendTo("#npcChildBar" + (i+1));
+                        $("<dl style='width:100%' id='npcChart"+ (i+1) + "' > </dl>").appendTo("#npcChildBar" + (i+1));
+                        $("<dt id='joytext_" + nameList[i] + "'> Joy " + getEmotionPercent(emotionList[i][0]) + "%</dt>").appendTo("#npcChart"+ (i+1));
+                        $("<dd><div id='joybar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][0]) + "%'> &nbsp </div></dd>").appendTo("#npcChart" + (i+1));
+                        $("<dt id='hopetext_" + nameList[i] + "'> Hope " + getEmotionPercent(emotionList[i][1]) + "%</dt>").appendTo("#npcChart"+ (i+1));
+                        $("<dd><div id='hopebar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][1]) + "%'> &nbsp </div></dd>").appendTo("#npcChart" + (i+1));
+                        $("<dt id='sorrowtext_" + nameList[i] + "'> Sorrow " + getEmotionPercent(emotionList[i][2]) + "%</dt>").appendTo("#npcChart" + (i+1));
+                        $("<dd><div id='sorrowbar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][2]) + "%'> &nbsp </div></dd>").appendTo("#npcChart" + (i+1));
+                        $("<dt id='feartext_" + nameList[i] + "'> Fear " + getEmotionPercent(emotionList[i][3]) + "%</dt>").appendTo("#npcChart" + (i+1));
+                        $("<dd><div id='fearbar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][3]) + "%'> &nbsp </div></dd>").appendTo("#npcChart" + (i+1));
 
-                    $("<div  id='scoreboard_" + (i+1) + "' class='" + getAlertClass(actionList[i]) + "' style='margin:0; text-align:center;'>" + nameList[i] + "</div>").appendTo('#scoreboard');
-                    //$("<span id='scoreboard_" + (i+1) + "' class='" + getLabelClass(actionList[i]) + "'style='margin:0; text-align:center;'>" + nameList[i] + "</span>").appendTo("#scoreboard");
-                }
-                if(npcCount == 0){
-                    $("<h1 id='gameOverText' style='text-align:center'> Game Over! </h1>").appendTo("#npcDiv");
-                    $("<div style='text-align:center'><button id='playAgain' class='btn btn-primary' type='button'> Play Again? </button></div> ").appendTo("#npcDiv");
-                    document.getElementById('nextStep').disabled = true; // Prevents the user from changing the game state when the game is over
-                    $('#playAgain').click(function(){ 
-                        reinitializeNPCs(); 
-                        document.getElementById('nextStep').disabled = false;
+                        $("<div  id='scoreboard_" + (i+1) + "' class='" + getAlertClass(actionList[i]) + "' style='margin:0; text-align:center;'>" + nameList[i] + "</div>").appendTo('#scoreboard');
+                        //$("<span id='scoreboard_" + (i+1) + "' class='" + getLabelClass(actionList[i]) + "'style='margin:0; text-align:center;'>" + nameList[i] + "</span>").appendTo("#scoreboard");
+                    }
+                    if(npcCount == 0){
+                        setUpEndGame();
+                        // $('#nextStep').css('background-color', '#eee');
+                        // $('#nextStep').css('border-color', '#eee');                    
+                    }
+                } else {
+                    //$("#referenceDiv").css('visibility', 'hidden');
+                    document.getElementById('nextStep').disabled = true;
+                    document.getElementById('info').disabled = true;
+                    $('#referenceDiv').css('opacity', '0.3');
+                    $("<div id='newGameDiv' height:100%; width:100%;> </div>").appendTo("#npcDiv");
+                    $("<div class='center-block' style='text-align:center; height:12em; width:50%; padding-bottom:1em;'><button id='startNewGame' class='btn btn-primary center-block' type='button' style='height:100%; width:100%;'> <h1> New Game </h1> </button></div> ").appendTo("#newGameDiv");
+                    $("<div class='center-block' style='text-align:center; height:4em; width:50%;'> <button id='howToPlay' class='btn btn-warning center-block' type='button' style='height:100%; width:100%;'> <h4> First time? </h4> </button></div> ").appendTo("#newGameDiv");
+                    $('#startNewGame').click(function(){
+                        firstGame();
                     });
-                    // $('#nextStep').css('background-color', '#eee');
-                    // $('#nextStep').css('border-color', '#eee');                    
+                    $('#howToPlay').click(function(){
+                        infoPopup();
+                    })
                 }
             }
             xmlhttp.send();
@@ -284,10 +326,8 @@
             }
             xmlhttp.send();              
 
-            var goText = document.getElementById('gameOverText');
-            var goButton = document.getElementById('playAgain');
-            goText.parentNode.removeChild(goText);
-            goButton.parentNode.removeChild(goButton);
+            var endDiv = document.getElementById('endGameDiv');
+            endDiv.parentNode.removeChild(endDiv);
             initializeNPCs();
         }
 
@@ -317,15 +357,6 @@
                         document.getElementById('nextStep').disabled = false;
                     }
                     for(var i = 0; i < npcCount; i++){
-                        // These calls are kept here as comments for debugging purposes.
-                        // $('#name_' + name_list[i]).text(name_list[i]);
-                        // $('#emotion_'+ name_list[i]).text("Emotions: " + formatEmotion(emotion_list[i]));  
-                        // $('#action_'+ name_list[i]).text("Action: " + action_list[i]);
-                        // $('#weights_'+ name_list[i]).text("Weights: " + formatSpaces(weight_list[i]));
-                        // $('#resources_'+ name_list[i]).text("Resources: " + formatSpaces(resource_list[i]));
-                        // $('#newresources_'+ name_list[i]).text("New Resources: " + formatSpaces(newresource_list[i]));
-                        //$("#npcChild"+ (i+1)).attr('class', getPanelClass(action_list[i]));
-
                         var dominentEmotionURL = getHighestEmotion(emotionList[i]);
                         document.getElementById('npcFace' + nameList[i]).src = dominentEmotionURL;
 
@@ -404,27 +435,33 @@
                     document.getElementById('nextStep').disabled = false;
                 }
                 if(npcCount == 0){
-                    $("<h1 id='gameOverText' style='text-align:center'> Game Over! </h1>").appendTo("#npcDiv");
-                    $("<div style='text-align:center'><button id='playAgain' class='btn btn-primary' type='button'> Play Again? </button></div> ").appendTo("#npcDiv");
-                    document.getElementById('nextStep').disabled = true;
-
-                    $('#playAgain').click(function(){
-                        reinitializeNPCs() 
-                        document.getElementById('nextStep').disabled = false;
-                    });
-                    // $('#nextStep').css('background-color', '#eee');
-                    // $('#nextStep').css('border-color', '#eee');
+                    setUpEndGame();
                 }
             });
+        }
+
+        function setUpEndGame(){
+            $("<div style='text-align:center' id='endGameDiv'></div>").appendTo("#npcDiv");
+            $("<h1 id='gameOverText' style='text-align:center'> Game Over! </h1>").appendTo("#endGameDiv");
+            $("<div style='text-align:center'><button id='playAgain' class='btn btn-danger' type='button'> Play Again? </button></div> ").appendTo("#endGameDiv");
+            document.getElementById('nextStep').disabled = true; // Prevents the user from changing the game state when the game is over
+            $('#playAgain').click(function(){ 
+                reinitializeNPCs(); 
+                document.getElementById('nextStep').disabled = false;
+            });
+
+            $("<div class='page-header'></div>").appendTo("#endGameDiv");
+            $("<h1 style='text-align:center'> Ready for the survey? </h1>").appendTo("#endGameDiv");
+            $("<div style='text-align:center'> <a href='surveys/questions'> <button type='button' class='btn btn-primary' style='text-align:center'> Survey </button> </a> </div>").appendTo("#endGameDiv");
         }
 
         $('document').ready(function(){
             $('#nextStep').click(function(){
                 updateNPCs();
             });
-            $('#playAgain').click(function(){
-                reinitializeNPCs()
-            });
+            $('#info').click(function(){
+                infoPopup();
+            })
             initializeNPCs();
         });
     </script>
