--- a/templates/acore.html
+++ b/templates/acore.html
@@ -2,9 +2,37 @@
 
 {% block title %} Acore Info {% endblock title %}
 
+{% block css %}
+    <style>
+        .breaks{
+            margin-top:0px;
+        }
+    </style>    
+
+{% endblock css %}
+
 {% block page_content %}
-    <div class='wells'>
-        <p> Info on ACOR-E </p>
+    <div class='col-sm-12' style='height:100vh; padding:2cm;'>
+        <h2 style='margin-top:0px'> Questions? </h2>
+        <div class='page-header' style='margin-top:0px'></div>
+
+        <h4 class='title'> What's going on here? </h4>
+        <p> This is an emotional simulation of a group of people waiting in line to get a video game. Every round, each of the 
+            people will have a chance to chose to pass the person in front of them. If they do, the person in front will decide if they
+            want to try and stop them by protesting. After each round, the person at the front of the line will get the video game.
+        </p>
+        <div class='page-header breaks' ></div>
+
+
+        <h4 class='title'> How are these decisions made? </h4>
+        <p> Each person values their health, reputation and position the line at different levels. The more they like each specific resource,
+            the more they'll try to protect it. You can see how their emotions change in the graphs next to their pictures.</p>
+        <div class='page-header breaks'></div>
+
+
+        <h4 class='title'> Want to get in contact? </h4>
+        <h5> Yathi BM </h5>
+        <p> email@ualberta.ca</p>
 
     </div>
 
