--- a/surveys/templates/surveys/home.html
+++ b/surveys/templates/surveys/home.html
@@ -25,8 +25,8 @@
         <div class="col-sm-7" id="npcDiv" style='position:relative'></div>
         <div id='referenceDiv' class="col-sm-5" style='height:75vh;'>
             <div> 
-                <button id="nextStep" class="btn btn-success " type="button" style='width:40%; height:3em;'><strong> Next Step </strong> </button> 
-                
+                <!-- <button id="nextStep" class="btn btn-success " type="button" style='width:40%; height:3em;'> Next Step </button> --> 
+                <button id="nextStep" class="btn btn-success " type="button" style='position:relative; min-width:100%'> Next Step </button>
             </div>
             <div class='page-header' style='margin-top:10px'> </div>
             <div id='scoreboard' class="col-sm-7" style='padding-left:0px; padding-right:0px;'> </div>
@@ -186,17 +186,17 @@
             var sorrowEmo = parseInt(getEmotionPercent(emotionList[2]));
             var fearEmo = parseInt(getEmotionPercent(emotionList[3]));
             var maxEmo = joyEmo;
-            var emoURL = "http://i61.tinypic.com/33c0ygh.jpg"; //joy
+            var emoURL = '{% static "surveys/happy1.jpg" %}' //http://i61.tinypic.com/33c0ygh.jpg;
             if(maxEmo < hopeEmo){
                 maxEmo = hopeEmo;
-                emoURL = "http://i60.tinypic.com/t8sxo4.jpg"  //actually angry face
+                emoURL = '{% static "surveys/afraid.jpg" %}' //"http://i60.tinypic.com/t8sxo4.jpg"  
             } 
             if(maxEmo < sorrowEmo){
                 maxEmo = sorrowEmo;
-                emoURL = "http://i61.tinypic.com/156ddtc.jpg"; // sad face
+                emoURL = '{% static "surveys/sad2.jpg" %}' //"http://i61.tinypic.com/156ddtc.jpg";
             }
             if(maxEmo < fearEmo){
-                emoURL = "http://i59.tinypic.com/245budt.jpg"; //fear face
+                emoURL = '{%  static "surveys/anger.jpg" %}' //"http://i59.tinypic.com/245budt.jpg";
             }
             //console.log(emoURL);
             return emoURL;
@@ -240,6 +240,7 @@
         }
 
         function highlightGameStatus(gameStatus){
+            console.log("highlight game status");
             if(gameStatus == 'initial'){
                 $('#status1').attr('class', 'game-status nonactive-status');
                 $('#status2').attr('class', 'game-status active-status');
@@ -308,6 +309,7 @@
                 //$('#gameStatus').html(getGameStatusTitle(gameStatus));
                 if(! newGame){
                     highlightGameStatus(gameStatus);
+                    document.getElementById('nextStep').disabled = false;
 
                     for(var i = 0; i < npcCount; i++){
                         $("<div id='npcParent" + (i+1) + "' class='col-sm-12 npc-container'> </div>").appendTo("#npcDiv");
@@ -315,7 +317,7 @@
                         $("<div id='npcChild" + (i+1) + "' class='col-sm-7'></div>").appendTo('#npcParent' + (i+1));
                         $("<h4 style='text-align:left'><strong>" + nameList[i] +" </strong></h4>").appendTo("#npcChild" + (i+1));
                         $("<img id='npcFace"+ nameList[i] + "' src='" + getHighestEmotion(emotionList[i]) + "' border='0' alt='happy' style='width:100%; height:100%;' />").appendTo("#npcChild" + (i+1));
-
+                        //$("<img id='npcFace"+ nameList[i] + "' src='{% static "surveys/happy1.jpg" %}' border='0' alt='happy' style='width:100%; height:100%;' />").appendTo("#npcChild" + (i+1));
                         $("<div id='npcChildBar" + (i+1) + "' class='col-sm-5'> </div>").appendTo("#npcParent" + (i+1));
                         $("<h4> &nbsp </h4>").appendTo("#npcChildBar" + (i+1));
                         $("<dl style='width:100%' id='npcChart"+ (i+1) + "' > </dl>").appendTo("#npcChildBar" + (i+1));
@@ -332,9 +334,7 @@
                         //$("<span id='scoreboard_" + (i+1) + "' class='" + getLabelClass(actionList[i]) + "'style='margin:0; text-align:center;'>" + nameList[i] + "</span>").appendTo("#scoreboard");
                     }
                     if(npcCount == 0){
-                        setUpEndGame();
-                        // $('#nextStep').css('background-color', '#eee');
-                        // $('#nextStep').css('border-color', '#eee');                    
+                        setUpEndGame();                  
                     }
                 } else {
                     //$("#referenceDiv").css('visibility', 'hidden');
@@ -378,6 +378,7 @@
             in the model. All of the npc information that needs to be changed in the UI is fetched from a JSON call.
             The next step button is disabled such that the user cannot ruin the animations by spamming the button.
             The changes made in the specific steps are in their respective functions as a matter of organization. */
+            console.log("update npcs");
             document.getElementById('nextStep').disabled = true; 
             var xmlhttp = new XMLHttpRequest();
             xmlhttp.open("GET", "surveys/ajax", true);
@@ -390,6 +391,8 @@
                     var emotionList = npcData["emotions"];
                     var gameStatus = npcData["gameStatus"];
                     var passingNPCs = npcData["passing_list"];
+
+                    console.log("Game status: " + gameStatus);
 
                     if(gameStatus == 'penultimate'){
                         penultimateUpdate(passingNPCs, nameList);
@@ -423,6 +426,7 @@
             /* For each NPC that is made a successful pass, it wil animate the swap in line
             as well as switch the names on the side bar. The nextStep button is only 
             reactivated after the animation is finished to prevent overlapping animations. */
+            console.log("penultimateUpdate");
             for(var i=0; i < passingNPCs.length; i ++){
                 
                 var passingIndex = passingNPCs[i]
@@ -459,6 +463,7 @@
             take the higher positions.  In the case that the line is now empty, the game over text and button will appear so that
             the user can start a new game. Currently, the new game button doesn't always work, and I have no idea what it's 
             successful execution is dependant on. */
+            console.log("final update");
             var panelHeight = $('#npcParent1').outerHeight();
             var npcName = document.getElementById('scoreboard_1');
             npcName.parentNode.removeChild(npcName);
@@ -483,18 +488,19 @@
         }
 
         function setUpEndGame(){
+            document.getElementById('nextStep').disabled = true; // Prevents the user from changing the game state when the game is over
+
             $("<div style='text-align:center' id='endGameDiv'></div>").appendTo("#npcDiv");
             $("<h1 id='gameOverText' style='text-align:center'> Game Over! </h1>").appendTo("#endGameDiv");
             $("<div style='text-align:center'><button id='playAgain' class='btn btn-danger' type='button'> Play Again? </button></div> ").appendTo("#endGameDiv");
-            document.getElementById('nextStep').disabled = true; // Prevents the user from changing the game state when the game is over
-            $('#playAgain').click(function(){ 
-                reinitializeNPCs(); 
-                document.getElementById('nextStep').disabled = false;
-            });
 
             $("<div class='page-header'></div>").appendTo("#endGameDiv");
             $("<h1 style='text-align:center'> Ready for the survey? </h1>").appendTo("#endGameDiv");
             $("<div style='text-align:center'> <a href='surveys/questions'> <button type='button' class='btn btn-primary' style='text-align:center'> Survey </button> </a> </div>").appendTo("#endGameDiv");
+
+            $('#playAgain').click(function(){ 
+                reinitializeNPCs(); 
+            });
         }
 
         $('document').ready(function(){
