--- a/surveys/templates/surveys/survey_results.html
+++ b/surveys/templates/surveys/survey_results.html
@@ -5,27 +5,27 @@
 
 {% block page_content %} 
 
-<div class="row">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-7">
-
+<div class="row" style='padding:2cm'>
+    <div class="col-sm-8">
+        <h2 style='margin-top:0px'> The Results </h2>
+        <div class='page-header' style='margin-top:0px'></div>
         <ul style="list-style-type:none; padding:0; margin:0"> 
 
             {% for survey_question in object_list %}
 
-                <li> <h4> {{survey_question.question}} [Total Votes: {{ survey_question.answer_set.all | count_votes }} ] {% if survey_question.integer_question %} [Average: {{ survey_question.answer_set.all | calc_average }}] {% endif %}</h4></li>
-                    
+                <li> <h4> {{survey_question.question}} [Total Votes: {{ survey_question.answer_set.all | count_votes }} ] {% if survey_question.integer_question %} 
+                    [Average: {{ survey_question.answer_set.all | calc_average }}] {% endif %}</h4></li>           
                     <ul>
-                            {% for mc_answer in survey_question.answer_set.all %}
-                                <li style="list-style-type:none; padding:0; margin:0;">
-                                    <h5> <strong>  {{mc_answer.answer_text}}</strong> [{{mc_answer.votes}}] </h5>
+                        {% for mc_answer in survey_question.answer_set.all %}
+                            <li style="list-style-type:none; padding:0; margin:0;">
+                                <h5> <strong>  {{mc_answer.answer_text}}</strong> [{{mc_answer.votes}}] </h5>
 
-                                    <div class="progress">
-                                        <div class="progress-bar {{forloop.counter | progress_color }}" style="width:{{ survey_question.answer_set.all | percentage:forloop.counter }}%;"></div>
-                                    </div>
-                                </li>
+                                <div class="progress">
+                                    <div class="progress-bar {{forloop.counter | progress_color }}" style="width:{{ survey_question.answer_set.all | percentage:forloop.counter }}%;"></div>
+                                </div>
+                            </li>
 
-                            {% endfor %}
+                        {% endfor %}
                     </ul>
 
                 <div class="page-header"></div>
