--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -23,17 +23,16 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/acore">ACOR-E</a></li>
-            <li><a href="/contact">Contact</a></li>
             <li><a href="/surveys/questions/">Survey</a></li>
             <li><a href="/surveys/results/">Results</a></li>
+            <li><a href="/acore">About</a></li>
           </ul>
         </div>
       </div>
     </nav>
     <div style='height:4em'> </div>
 
-    <div class="container" style='background-color:#ffffff; height:100%; padding-left:0px; padding-right:0px;'>
+    <div class="container" style='background-color:#ffffff; height:100%; padding-left:0px; padding-right:0px; margin-top:-1em;'>
         {% block page_content %}{% endblock page_content %}
     </div>
 
